[package]
name = "wd2sql"
version = "0.1.0"
authors = ["Philipp Emanuel Weidmann <pew@worldwidemann.com>"]
description = "Transform a Wikidata JSON dump into an SQLite database"
repository = "https://github.com/p-e-w/wd2sql"
readme = "README.md"
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
clap = { version = "4.0.26", features = ["derive"] }
rusqlite = { version = "0.28.0", features = ["bundled", "chrono"] }
simd-json = "0.7.0"
wikidata = "0.3.0"
chrono = "0.4.23"
humansize = "2.1.3"
humantime = "2.1.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.0"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = true
